tests/single_instruction_translation_validation/mcsema/register-variants/idivw_r16/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:194:35: error: use of undefined value '@__remill_error'
  %25 = tail call %struct.Memory* @__remill_error(%struct.State* nonnull dereferenceable(3376) %1, i64 %24, %struct.Memory* %0) #21
                                  ^
0.01user 0.02system 0:00.03elapsed 108%CPU (0avgtext+0avgdata 27476maxresident)k
0inputs+16outputs (0major+3254minor)pagefaults 0swaps
